2012-04-10 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/ajax/reporting.ajax.php
	 godmode/reporting/reporting_builder.list_items.php
	 godmode/reporting/graph_builder.main.php
	 godmode/reporting/reporting_builder.php
	 godmode/reporting/reporting_builder.item_editor.php: Several fixes 
	 in metaconsole reports.

2012-04-10  Sergio Martin <sergio.martin@artica.es>

	* include/functions_agents.php: Fixed an error when try
	to retrieve policy acl's without agents choosed

2012-04-10  Sergio Martin <sergio.martin@artica.es>

	* include/javascript/pandora.js
	operation/agentes/ver_agente.php
	godmode/massive/massive_add_alerts.php
	godmode/massive/massive_delete_action_alerts.php
	godmode/massive/massive_delete_alerts.php
	godmode/massive/massive_edit_modules.php
	godmode/massive/massive_add_action_alerts.php: Improve some parts
	of massive operations section as add ALL/COMMON switch in the
	agents/modules selectors, allow to select multiple alert actions 
	in the delete/add operations, add the period advanced control to
	the modules edition section and improve this period control

2012-04-09 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/reporting/reporting_builder.list_items.php
	 godmode/reporting/reporting_builder.item_editor.php: Fixed display
	 of grouped reports in metaconsole.

	Fixes: #3514539

2012-04-09 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_ui.php: cleaned source code style.
	
	* extensions/update_pandora,
	extensions/update_pandora/functions.ajax.php,
	extensions/update_pandora/functions.php,
	extensions/update_manager/lib/functions.ajax.php,
	extensions/update_manager/lib/functions.php: moved this files into the
	extension update_manager.

	* extensions/update_manager/main.php: added hook (as a tab) the 
	"update_pandora".

	Merged from the branch pandora_4.0

2012-04-09 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/javascript/pandora.js