@@ -1,3 +1,8 @@
+2012-04-10 Dario Rodriguez <dario.rodriguez@artica.es>
+
+	*operation/menu.php,
+	godmode/menu.php: Fixed a bug showing extensions with new menu structure.
+
 2012-04-10 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
 
 	* include/ajax/reporting.ajax.php
